src/test/ui/compile-fail-migration/rfc-1937-termination-trait/termination-trait-not-satisfied.stderr
error[E0277]: `main` has invalid return type `ReturnType`
  --> $DIR/termination-trait-not-satisfied.rs:13:14
   |
LL | fn main() -> ReturnType { //~ ERROR `main` has invalid return type `ReturnType`
   |              ^^^^^^^^^^ `main` can only return types that implement `std::process::Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
